--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     <!--listing-->
                     <div class="ui attached orange segment" id="projects">
                         <div class="ui accordion">
-                            <div id="proj_9" class="ui padded vertical segment m-padded-tb-large fullstack java spring mysql">
+                            <div id="proj_9" class="ui padded vertical segment m-padded-tb-large fullstack java spring mysql frontend">
                                 <div class="title">
                                     <h3 class="ui header">IBM Security Monopoly-style Game Development</h3>
                                     <p>Capstone Poject</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Developing a Monopoly-style game to introduce MSS market and strengths of IBM
                                     Security services to customers <br>
                                     • Implementing the game development with Java, Spring Boot, and MVC design pattern
@@ -65,17 +65,18 @@
 
                                 <div class="ui stackable grid">
                                     <div class="right aligned  column">
-                                        <div class="ui large orange basic label">Back End</div>
+                                        <div class="ui large orange basic label">Full Stack</div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="proj_8" class="ui padded vertical segment m-padded-tb-large fullstack java spring mysql">
+                            <div id="proj_8" class="ui padded vertical segment m-padded-tb-large fullstack java spring mysql frontend">
                                 <div class="title">
                                     <h3 class="ui header">Apartment Vacation Rental and Sublease Web Development</h3>
+                                    <p>Individual Project</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Developing a website for students’ renting apartment using Spring Boot and MySQL
                                     with prototype driven development <br>
                                     • Defined exception handling and log processing;
@@ -95,9 +96,10 @@
                             <div id="proj_7" class="ui padded vertical segment m-padded-tb-large fullstack python django mysql">
                                 <div class="title">
                                     <h3 class="ui header">Social Media Site Development</h3>
+                                    <p>Individual Project</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Conducted development following Django MTV pattern, connected with SQLite to receive,
                                     store, and send back user data <br>
                                     • Implemented the front-end for users to register,
@@ -116,9 +118,10 @@
                             <div id="proj_6" class="ui padded vertical segment m-padded-tb-large backend python flask mysql">
                                 <div class="title">
                                     <h3 class="ui header">Store Management Web Development</h3>
+                                    <p>Individual Project</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Built REST APIs to realize interactions between client and server and stored objects
                                     to relational database with flask <br>
                                     • Processed the interactions with advanced request parsing for JSON payload and
@@ -140,7 +143,7 @@
                                     <p>Research Intern</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Wrote Python scripts to address data wrangling for messy raw data, including
                                     unifying time structure, combining human- made labels and sensor-generated time slots,
                                     and realizing automatically processing data across all participants’ folders <br>
@@ -160,10 +163,10 @@
                             <div id="proj_4" class="ui padded vertical segment m-padded-tb-large data ml python">
                                 <div class="title">
                                     <h3 class="ui header">Natural Language Processing Employee Review Analysis</h3>
-                                    <p>Data Cleaning and Machine Learning Analysis</p>
+                                    <p>Course Project - Data Cleaning and Machine Learning Analysis</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Preprocessed 60k+ employee reviews with different data types using Python, conducted
                                     topic modeling with Latent Dirichlet Allocation and Latent Semantic Analysis models,
                                     and made interactive visualization for the extracted topics<br>
@@ -182,10 +185,10 @@
                             <div id="proj_3" class="ui padded vertical segment m-padded-tb-large data ml python">
                                 <div class="title">
                                     <h3 class="ui header">Computer Vision and Text Detection Exploration</h3>
-                                    <p>Machine Learning Analysis</p>
+                                    <p>Course Project - Machine Learning Analysis</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Created a multi-modal (CV + NLP) classification system to predict whether a visual
                                     question is answerable or not <br>
                                     • Defined a feature representation using image and question based features, applied
@@ -206,10 +209,10 @@
                             <div id="proj_2" class="ui padded vertical segment m-padded-tb-large data python mysql">
                                 <div class="title">
                                     <h3 class="ui header">Data Wrangling Analysis</h3>
-                                    <p>Raw Data Cleaning and DB Design</p>
+                                    <p>Course Project - Raw Data Cleaning and DB Design</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Wrote Python scripts with csv library to clean raw data, including breaking down
                                     rows, unifying time and table structure <br>
                                     • Designed and implemented the database based on the cleaned data; used Python to
@@ -227,9 +230,10 @@
                             <div id="proj_1" class="ui padded vertical segment m-padded-tb-large backend c#">
                                 <div class="title">
                                     <h3 class="ui header">Information Systems Design and Implementation Project</h3>
+                                    <p>Undergraduate Course Project</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Implemented GUI information management systems in C/S and B/S architectures with
                                     C# and .Net<br>
                                     • Realized user management, entity management, system log management, and “CRUD”
@@ -249,7 +253,7 @@
                                     <p>Undergraduate Research Assistant</p>
                                 </div>
 
-                                <p class="content">
+                                <p class="content m-text-large">
                                     • Proposed multi-dimensional model for data integration to observe sales and operation
                                     indicators of gas stations<br>
                                     • Implemented a data analysis framework using Power BI for marketing evaluation to
@@ -269,6 +273,25 @@
 
                 <!--RIGHT-->
                 <div class="five wide column">
+
+                    <!--Education-->
+                    <div class="ui segments">
+                        <div class="ui secondary segment">
+                            <div class="column" align="left">
+                                <i class="book icon"></i>Education
+                            </div>
+                        </div>
+
+                        <div class="ui orange segment">
+                            <h3 class="ui header">University of Texas at Austin</h3>
+                            <p class="m-text-large">M.S. in Information Studies</p>
+                            <p>Aug. 2018 - May 2020</p>
+
+                            <h3 class="ui header">China University of Petroleum - Beijing</h3>
+                            <p class="m-text-large">B.B.A. in Management Information Systems</p>
+                        </div>
+                    </div>
+
                     <!--Category-->
                     <div class="ui segments">
                         <div class="ui secondary segment">
@@ -285,13 +308,13 @@
                         <div class="ui orange segment">
                             <div class="ui fluid vertical menu">
                                 <a href="#" class="item">Full Stack
-                                <div class="ui orange basic left pointing label">1</div>
+                                <div class="ui orange basic left pointing label">3</div>
                                 </a>
                                 <a href="#" class="item">Back End
-                                    <div class="ui orange basic left pointing label">1</div>
+                                    <div class="ui orange basic left pointing label">2</div>
                                 </a>
                                 <a href="#" class="item">Data Analytics
-                                    <div class="ui orange basic left pointing label">1</div>
+                                    <div class="ui orange basic left pointing label">5</div>
                                 </a>
                             </div>
                         </div>
@@ -312,16 +335,13 @@
 
                         <div class="ui orange segment">
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
-                                Java <div class="detail">1</div>
+                                Java <div class="detail">2</div>
                             </a>
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
-                                Python <div class="detail">1</div>
+                                Python <div class="detail">7</div>
                             </a>
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
-                                MySQL <div class="detail">1</div>
-                            </a>
-                            <a href="#" class="ui orange basic left pointing label m-margin-tb">
-                                Spring Boot <div class="detail">1</div>
+                                Spring Boot <div class="detail">2</div>
                             </a>
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
                                 Django <div class="detail">1</div>
@@ -330,10 +350,16 @@
                                 Flask <div class="detail">1</div>
                             </a>
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
-                                Machine Learning <div class="detail">1</div>
+                                MySQL <div class="detail">5</div>
                             </a>
                             <a href="#" class="ui orange basic left pointing label m-margin-tb">
                                 C# <div class="detail">1</div>
+                            </a>
+                            <a href="#" class="ui orange basic left pointing label m-margin-tb">
+                                Machine Learning <div class="detail">4</div>
+                            </a>
+                            <a href="#" class="ui orange basic left pointing label m-margin-tb">
+                                HTML+CSS+JavaScript <div class="detail">2</div>
                             </a>
 
                         </div>
