--- a/tag.html
+++ b/tag.html
@@ -40,7 +40,7 @@
                         <h3 class="ui orange header">Tags</h3>
                     </div>
                     <div class="right aligned column">
-                        <h2 class="class ui orange header m-inline-block m-text-thin"> 8 </h2>&nbsp Tags in total
+                        <h2 class="class ui orange header m-inline-block m-text-thin"> 9 </h2>&nbsp Tags in total
                     </div>
                 </div>
             </div>
@@ -48,19 +48,19 @@
             <!--tags-->
             <div class="ui attached segment m-padded-tb-large" id="filter">
                 <a href="#" data-filter="java" class="ui orange basic left pointing label large m-margin-tb">
-                    Java <div class="detail">1</div>
+                    Java <div class="detail">2</div>
                 </a>
 
                 <a href="#" data-filter="python" class="ui orange basic left pointing label large m-margin-tb">
-                    Python <div class="detail">1</div>
+                    Python <div class="detail">7</div>
                 </a>
 
                 <a href="#" data-filter="mysql" class="ui orange basic left pointing label large m-margin-tb">
-                    MySQL <div class="detail">1</div>
+                    MySQL <div class="detail">5</div>
                 </a>
 
                 <a href="#" data-filter="spring" class="ui orange basic left pointing label large m-margin-tb">
-                    Spring Boot <div class="detail">1</div>
+                    Spring Boot <div class="detail">2</div>
                 </a>
 
                 <a href="#" data-filter="django" class="ui orange basic left pointing label large m-margin-tb">
@@ -72,11 +72,15 @@
                 </a>
 
                 <a href="#" data-filter="ml" class="ui orange basic left pointing label large m-margin-tb">
-                    Machine Learning <div class="detail">1</div>
+                    Machine Learning <div class="detail">4</div>
                 </a>
 
                 <a href="#" data-filter="c#" class="ui orange basic left pointing label large m-margin-tb">
                     C# <div class="detail">1</div>
+                </a>
+
+                <a href="#" data-filter="frontend" class="ui orange basic left pointing label large m-margin-tb">
+                    HTML+CSS+JavaScript <div class="detail">2</div>
                 </a>
             </div>
 
