--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
     <div class="m-container-small m-padded-tb-big">
         <div class="ui container">
             <div class="ui stackable grid">
-                <div class="seven wide column" align="center">
+                <div class="six wide column" align="center">
                     <img src="./static/images/me.jpg" alt="" class="ui rounded image medium">
                 </div>
 
-                <div class="nine wide column" align="center">
+                <div class="ten wide column" align="center">
                     <div class="ui top attached segment">
                         <h2 class="ui header">About me</h2>
                     </div>
@@ -55,15 +55,13 @@
                         <div class="ui orange large basic left pointing label m-margin-tb">Thinking</div>
                     </div>
 
-                    <div class="ui attached segment">
-                        <div class="ui teal large basic left pointing label m-margin-tb">Java</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">Python</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">SQL</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">ML</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">Java</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">Python</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">SQL</div>
-                        <div class="ui teal large basic left pointing label m-margin-tb">ML</div>
+                    <div class="ui attached segment" align="left">
+                        <p class="m-text-large">
+                            Li, a graduate student at UT Austin, is actively seeking full-time opportunities now. <br><br>
+                            I'm a technology enthusiast, enjoying learning new skills and putting them into practice.
+                            I also have a wide range of hobbies -- hiking, travelling, movies, music... If you find yourself
+                            a big fan of romantic movies, then I'm with you! If you like New Metal and Hard Rock, then I like you!
+                        </p>
                     </div>
 
                     <div class="ui bottom attached segment">
@@ -73,7 +71,7 @@
                         <a target="_blank" href="https://github.com/nieli9697" class="ui circular icon button">
                             <i class="github icon large"></i>
                         </a>
-                        <a target="_blank" href="#" class="ui circular icon button">
+                        <a target="_blank" href="./static/LiNie_Resume.pdf" class="ui circular icon button">
                             <i class="file alternate icon large"></i>Resume
                         </a>
                     </div>
