--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 
                             <h3 class="ui header">China University of Petroleum - Beijing</h3>
                             <p class="m-text-large">B.B.A. in Management Information Systems</p>
+                            <p>Sep. 2014 - Jun. 2018</p>
                         </div>
                     </div>
 
