--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
                         <div class="ui accordion">
                             <div id="proj_9" class="ui padded vertical segment m-padded-tb-large fullstack java spring mysql frontend">
                                 <div class="title">
-                                    <h3 class="ui header">IBM Security Monopoly-style Game Development</h3>
-                                    <p>Capstone Poject</p>
+                                    <h3 class="ui header">IBM Security Scenario-based Web Game Development</h3>
+                                    <p>Capstone Project - Full Stack web development</p>
                                 </div>
 
                                 <p class="content m-text-large">
-                                    • Developing a Monopoly-style game to introduce MSS market and strengths of IBM
-                                    Security services to customers <br>
-                                    • Implementing the game development with Java, Spring Boot, and MVC design pattern
+                                    • Developed a game with Semantic UI, Spring Boot, and MVC pattern to introduce IBM Security
+                                    products and services <br>
+                                    • Realized functions like calculating and displaying scores, retrieving data from MySQL
+                                    database, displaying events withPagination, and rendering results to the front-end pages.
                                 </p>
 
                                 <div class="ui stackable grid">
@@ -257,7 +258,8 @@
                                     • Proposed multi-dimensional model for data integration to observe sales and operation
                                     indicators of gas stations<br>
                                     • Implemented a data analysis framework using Power BI for marketing evaluation to
-                                    generate insights for future strategies • Reached a 93% accuracy of classifying
+                                    generate insights for future strategies <br>
+                                    • Reached a 93% accuracy of classifying
                                     potentially acquired gas stations by applying KNN model
                                 </p>
 
