--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                         <a target="_blank" href="https://github.com/nieli9697" class="ui circular icon button">
                             <i class="github icon large"></i>
                         </a>
-                        <a target="_blank" href="./static/Li_Nie_Resume.pdf" class="ui circular icon button">
+                        <a target="_blank" href="./static/LiNie_Resume.pdf" class="ui circular icon button">
                             <i class="file alternate icon large"></i>Resume
                         </a>
                     </div>
