--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
 
 
     <!--  Content  -->
-    <div class="m-container-small m-padded-tb-big">
+    <div class="m-container m-padded-tb-big">
         <div class="ui container">
             <div class="ui stackable grid">
-                <div class="six wide column" align="center">
+                <div class="four wide column" align="center">
                     <img src="./static/images/me.jpg" alt="" class="ui rounded image medium">
                 </div>
 
-                <div class="ten wide column" align="center">
+                <div class="twelve wide column" align="center">
                     <div class="ui top attached segment">
                         <h2 class="ui header">About me</h2>
                     </div>
@@ -57,10 +57,23 @@
 
                     <div class="ui attached segment" align="left">
                         <p class="m-text-large">
-                            Li, a graduate student at UT Austin, is actively seeking full-time opportunities now. <br><br>
+                            Li, a graduate student at UT Austin, is actively seeking full-time opportunities in
+                            Software Engineering and/or Data Analytics now.  <br><br>
+
                             I'm a technology enthusiast, enjoying learning new skills and putting them into practice.
-                            I also have a wide range of hobbies -- hiking, travelling, movies, music... If you find yourself
-                            a big fan of romantic movies, then I'm with you! If you like New Metal and Hard Rock, then I like you!
+                            During my undergraduate year, I got exposed to various aspects in Information Technology
+                            field, including Business Intelligence, Data Mining, Machine Learning, Software Engineering,
+                            and etc. After coming to Texas, I further learned more advanced knowledge about Machine Learning,
+                            Data Processing, and Database techniques. I also actively joined research projects and course
+                            projects to address real-life problems using the knowledge I learned. Meanwhile, I utilized
+                            the online resources and proactively conducted individual projects to further sharpen my technical
+                            skills. Getting exposed to problems in different domains gave me the chance to learn cutting-edge
+                            techniques and acquire fast learning skills. Furthermore, my previous experience made me innovative,
+                            work well on a team, and act with integrity. <br><br>
+
+                            In my spare time, I have a wide range of hobbies -- hiking, travelling, movies, music...
+                            If you are a big fan of romantic movies starring Vivien Leigh and Audrey Hepburn, I'm the same
+                            with you. If you like New Metal and Hard Rock, we will have a lot more to talk about.
                         </p>
                     </div>
 
