--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                                 </div>
 
                                 <p class="content m-text-large">
-                                    • Developed a game with Semantic UI, Spring Boot, and MVC pattern to introduce IBM Security
-                                    products and services <br>
-                                    • Realized functions like calculating and displaying scores, retrieving data from MySQL
-                                    database, displaying events withPagination, and rendering results to the front-end pages.
+                                    This is the Capstone Project I completed for my graduate study. The goal of this project
+                                    is to develop a game to introduce IBM Security products and services. <br><br>
+                                    • Developed a web game with Semantic UI, Spring Boot, following MVC design pattern. <br>
+                                    • Designed and implemented front-end pages, utilizing JavaScript to realize interactions
+                                    with users at front-end. <br>
+                                    • Realized back-end functions under Spring Boot framework, calculating and displaying scores, retrieving data from MySQL
+                                    database, displaying events with Pagination, and rendering results to the front-end pages.
                                 </p>
 
                                 <div class="ui stackable grid">
