--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <a href="tag.html" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
                 <a href="#" class="active m-item item m-mobile-hide"><i class="info icon"></i>About me</a>
                 <div class="item right aligned column">
-                    <p class="m-text">Stay hungry, stay foolish, stay doubtful.</p>
+                    <p class="m-text">Stay hungry, stay foolish, stay curious.</p>
                 </div>
             </div>
         </div>
