--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
                                 <p class="content m-text-large">
                                     This is the Capstone Project I completed for my graduate study. The goal of this project
-                                    is to develop a game to introduce IBM Security products and services. <br><br>
+                                    is to develop a game to introduce IBM Security products and services. Click <a href="https://capstone-li.herokuapp.com/">
+                                    here</a> to try this game!
+                                    <br><br>
                                     • Developed a web game with Semantic UI, Spring Boot, following MVC design pattern. <br>
                                     • Designed and implemented front-end pages, utilizing JavaScript to realize interactions
                                     with users at front-end. <br>
